Upgrade project to Spring Boot 3.3.x using openrewrite.